--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     background: #3d3d3d;
     color: #fff;
     text-align: center;
-    padding: 60px;
+    
     margin: 0;
     
     font-family: 'Overpass', sans-serif;
@@ -21,3 +21,12 @@ body {
     font-size: 30px;
     color: bisque;
 }
+
+/* Lyrics section */
+.lyrics {
+    margin: 0;
+    color: black;
+    background-color: bisque;
+    padding: 10px 40px 10px 40px;
+}
+
